Sync: apply local frontend/backend fixes